--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,8 +10,8 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 
-# Include SLIM's extra init file
-import /init.slim.rc
+# Include AquariOS extra init file
+import /init.aquarios.rc
 
 
 on early-init
